--- a/src/APP/templates/index.html
+++ b/src/APP/templates/index.html
@@ -12,19 +12,21 @@
         <label for="age">Edad:</label>
         <input type="number" id="age" name="age" required><br><br>
         
-        <label for="height">Altura (cm):</label>
+        <label for="height">Altura (m):</label>
         <input type="number" id="height" name="height" required><br><br>
         
         <label for="weight">Peso (kg):</label>
         <input type="number" id="weight" name="weight" required><br><br>
         
-        <label for="fcvc">Frecuencia de consumo de verduras:</label>
-        <input type="number" id="fcvc" name="fcvc" required><br><br>
+        <label for="fcvc">Frecuencia de consumo de verduras (1 a 3):</label>
+        <input type="number" id="fcvc" name="fcvc" min="1" max="3" step="0.01" required><br><br>
+
         
-        <label for="ncp">Número de comidas principales al día:</label>
-        <input type="number" id="ncp" name="ncp" required><br><br>
+        <label for="ncp">Número de comidas principales al día (1 a 4):</label>
+        <input type="number" id="ncp" name="ncp" min="1" max="4" required><br><br>
+
         
-        <label for="caec">Frecuencia de consumo de alimentos de alta caloría:</label>
+        <label for="caec">Frecuencia de consumo de alimentos entre comidas:</label>
         <select id="caec" name="caec" required>
             <option value="no">No</option>
             <option value="sometimes">A veces</option>
@@ -32,30 +34,32 @@
             <option value="always">Siempre</option>
         </select><br><br>
         
-        <label for="ch2o">Consumo de agua diario (litros):</label>
-        <input type="number" id="ch2o" name="ch2o" step="0.01" required><br><br>
+        <label for="ch2o">Consumo de agua diario en litros (1-3):</label>
+        <input type="number" id="ch2o" name="ch2o" min="1" max="3" step="0.01" required><br><br>
+
         
-        <label for="faf">Actividad física semanal:</label>
-        <input type="number" id="faf" name="faf" step="0.01" required><br><br>
+        <label for="faf">Frecuencia de actividad física (1-3):</label>
+        <input type="number" id="faf" name="faf" min="1" max="3" step="0.01" required><br><br>
+
         
-        <label for="tue">Tiempo de uso de pantalla diario (horas):</label>
-        <input type="number" id="tue" name="tue" step="0.01" required><br><br>
+        <label for="tue">Tiempo de uso de dispositivos tecnológicos (0-2):</label>
+        <input type="number" id="tue" name="tue" min="0" max="2" step="0.01" required><br><br>
         
-        <label for="calc">Consumo de calcio:</label>
+        
+        <label for="calc">Consumo de alcohol:</label>
         <select id="calc" name="calc" required>
             <option value="no">No</option>
             <option value="sometimes">A veces</option>
             <option value="frequently">Frecuentemente</option>
-            <option value="always">Siempre</option>
         </select><br><br>
         
         <label for="mtrans">Medio de transporte:</label>
         <select id="mtrans" name="mtrans" required>
-            <option value="public">Público</option>
-            <option value="car">Automóvil</option>
-            <option value="motorbike">Motocicleta</option>
-            <option value="bike">Bicicleta</option>
-            <option value="walk">Caminata</option>
+            <option value="Public_Transportation">Público</option>
+            <option value="Automobile">Automóvil</option>
+            <option value="Motorbike">Motocicleta</option>
+            <option value="Bike">Bicicleta</option>
+            <option value="Walking">Caminando</option>
         </select><br><br>
         
         <label for="gender">Género:</label>
