--- a/src/APP/templates/result.html
+++ b/src/APP/templates/result.html
@@ -1,13 +1,11 @@
-<!-- result.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultado de la Predicción</title>
+    <title>Resultado de Predicción</title>
 </head>
 <body>
-    <h1>Resultado de la Predicción</h1>
-    <p>El nivel de sobrepeso predicho es: {{ prediction }}</p>
+    <h2>Su nivel de obesidad es: {{ nivel_obesidad }}</h2>
 </body>
 </html>
