--- a/src/APP/templates/formulario.html
+++ b/src/APP/templates/formulario.html
@@ -83,7 +83,7 @@
             <option value="bicicleta">Bicicleta</option>
             <option value="moto">Moto</option>
             <option value="coche">Coche</option>
-            <option value="transporte_publico">Transporte Público</option>
+            <option value="transporte_publico">Transporte Publico</option>
         </select><br>
 
         <input type="submit" value="Predecir">
