--- a/src/APP/templates/formulario.html
+++ b/src/APP/templates/formulario.html
@@ -18,10 +18,10 @@
         <input type="number" name="edad" id="edad" min="0" max="100" required><br>
 
         <label for="altura">Altura (m):</label>
-        <input type="number" name="altura" id="altura" step="0.01" required><br>
+        <input type="number" name="altura" id="altura" min="0" max="2,5" step="0.01" required><br>
 
         <label for="peso">Peso (kg):</label>
-        <input type="number" name="peso" id="peso" step="0.1" required><br>
+        <input type="number" name="peso" id="peso" min="0" max="400" step="0.1" required><br>
 
         <label for="antecedentes_obesidad">Antecedentes familiares de obesidad:</label>
         <select name="antecedentes_obesidad" id="antecedentes_obesidad">
@@ -36,10 +36,10 @@
         </select><br>
 
         <label for="ingesta_vegetales">Frecuencia de ingesta de vegetales en las comidas(1-3):</label>
-        <input type="number" name="ingesta_vegetales" id="ingesta_vegetales" min="1" max="3" required><br>
+        <input type="number" name="ingesta_vegetales" id="ingesta_vegetales" min="1" max="3" step="0.01" required><br>
 
         <label for="num_comidas_principales">Número de comidas principales(1-4):</label>
-        <input type="number" name="num_comidas_principales" id="num_comidas_principales" min="1" max="4" required><br>
+        <input type="number" name="num_comidas_principales" id="num_comidas_principales" min="1" max="4" step="0.01" required><br>
 
         <label for="consumo_entre_comidas">Consumo de alimentos entre comidas:</label>
         <select name="consumo_entre_comidas" id="consumo_entre_comidas">
@@ -56,7 +56,7 @@
         </select><br>
 
         <label for="consumo_agua_diario">Consumo de agua diario litros(1-3):</label>
-        <input type="number" name="consumo_agua_diario" id="consumo_agua_diario" min="1" max="3" required><br>
+        <input type="number" name="consumo_agua_diario" id="consumo_agua_diario" min="1" max="3" step="0.01" required><br>
 
         <label for="monitoreo_calorias">Monitoreo consumo calorías:</label>
         <select name="monitoreo_calorias" id="monitoreo_calorias">
@@ -65,10 +65,10 @@
         </select><br>
 
         <label for="frecuencia_actividad_fisica">Frecuencia actividad física(1-3):</label>
-        <input type="number" name="frecuencia_actividad_fisica" id="frecuencia_actividad_fisica" min="1" max="3" required><br>
+        <input type="number" name="frecuencia_actividad_fisica" id="frecuencia_actividad_fisica" min="1" max="3" step="0.01" required><br>
 
         <label for="tiempo_uso_tecnologico">Tiempo de uso de dispositivos tecnológicos(0-2):</label>
-        <input type="number" name="tiempo_uso_tecnologico" id="tiempo_uso_tecnologico" min="0" max="2" required><br>
+        <input type="number" name="tiempo_uso_tecnologico" id="tiempo_uso_tecnologico" min="0" max="2" step="0.01" required><br>
 
         <label for="consumo_alcohol">Consumo de alcohol:</label>
         <select name="consumo_alcohol" id="consumo_alcohol">
